[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pysigmap"
authors = [
    {name = "Exneyder A. Montoya-Araque", email = "eamontoyaa@gmail.com"},
    {name = "A. J. Aparicio-Ortube", email = "aaparicioo@unal.edu.co"},
    {name = "D. G. Zapata-Medina", email = "dgzapata@unal.edu.co"},
    {name = "L. G. Arboleda-Monsalve", email = "luis.arboleda@ucf.edu"},
    ]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.6"
dependencies = [
    "numpy >=1.19.1",
    "matplotlib >=3.2.2",
    "scipy >= 1.5.0",
    "pandas >= 1.1.1",
    "mstools >= 0.1.0"
]

[project.urls]
Source  = "https://github.com/eamontoyaa/pysigmap"
Documentation = "https://pysigmap.readthedocs.io/en/latest/"
